[gd_scene load_steps=3 format=3 uid="uid://c1c3csrtfqabx"]

[ext_resource type="Script" path="res://scripts/game/snake/snake2.gd" id="1_hknqd"]

[sub_resource type="Curve" id="Curve_gny86"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.524194, 0.89011), -0.561086, -0.561086, 0, 0, Vector2(0.790323, 0.593406), -1.72601, -1.72601, 0, 0, Vector2(1, 0.153846), -1.79089, 0.0, 0, 0]
point_count = 4

[node name="Snake2" type="Node2D"]
script = ExtResource("1_hknqd")

[node name="Line2D" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, -8, 0, -64, 0, -128, 0)
width = 64.0
width_curve = SubResource("Curve_gny86")
default_color = Color(0.921569, 0.670588, 0.72549, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="MovementTimer" type="Timer" parent="."]
one_shot = true

[node name="InvulnTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="MovementTimer" to="." method="_on_movement_timer_timeout"]
[connection signal="timeout" from="InvulnTimer" to="." method="_on_invuln_timer_timeout"]
